prod/force-app/main/default/objects/Publication_Simap_Detail__c/Publication_Simap_Detail__c.object-meta.xml
<CustomObject>
    <label>Publication Simap Detail</label>
    <nameField>
        <label>Publication Simap Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Simap Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>