prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Code_CPV__c.field-meta.xml
<CustomField>
    <fullName>Code_CPV__c</fullName>
    <label>Code CPV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>