prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Date_de_fin_offre__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_offre__c</fullName>
    <label>Date de fin offre</label>
    <type>DateTime</type>
</CustomField>