prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Date_de_publication__c.field-meta.xml
<CustomField>
    <fullName>Date_de_publication__c</fullName>
    <label>Date de publication</label>
    <type>DateTime</type>
</CustomField>