prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Id_publication_detail__c.field-meta.xml
<CustomField>
    <fullName>Id_publication_detail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Publication detail Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>