prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Numero_de_publication__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_publication__c</fullName>
    <label>Numéro de publication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>