prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Reference_de_l_offre__c.field-meta.xml
<CustomField>
    <fullName>Reference_de_l_offre__c</fullName>
    <label>Référence de l&apos;offre</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>