prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <length>200</length>
    <type>Text</type>
</CustomField>