prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Telephone_bureau_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Telephone_bureau_d_achat__c</fullName>
    <label>Téléphone bureau d achat</label>
    <length>200</length>
    <type>Text</type>
</CustomField>