prod/force-app/main/default/objects/Publication_Simap_Detail__c/fields/Telephone_contact__c.field-meta.xml
<CustomField>
    <fullName>Telephone_contact__c</fullName>
    <label>Téléphone contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>